--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ body {
 .edit {
 	position: relative;
 	margin: 0;
-	width: 100%;
+	width: calc(100% - 45px);
 	font-size: 24px;
 	font-family: inherit;
 	font-weight: inherit;
@@ -168,7 +168,6 @@ body {
 
 .todo-list li.editing .edit {
 	display: block;
-	width: 506px;
 	padding: 12px 16px;
 	margin: 0 0 0 43px;
 }
