--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,7 @@ body {
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	border-radius: 15px;
 }
 
 .new-todo {
@@ -169,7 +170,7 @@ body {
 .todo-list li.editing .edit {
 	display: block;
 	padding: 12px 16px;
-	margin: 0 0 0 43px;
+	margin: 2px 0 0 43px;
 }
 
 .todo-list li.editing .view {
